# toy-browser

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config.toml
example/boa-run/: class-test.js  class-test.rs  classes.rs  global.js  object-test.js  object-test.rs  test.rs
example/font/: Readme.md  layout-test.rs  render-test.rs
notes/: layout.dio
src/: css.rs  default.css  dom.rs  font.rs  html.rs  layout.rs  main.rs  parser.rs  raster.rs  source.html  style.rs  thread.rs
src/config/: default.css
src/demo/: block-test.html  painting.html  source.css  source.html  text-test.html
