[package]
name = "toy-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
boa_engine = "0.16.0"
fontdue = "0.7.2"
gc = "0.4.1"

[workspace]
resolver = "2"

[[example]]
name = "boa-run"
path = "example/boa-run/test.rs"

[[example]]
name = "boa-class-test"
path = "example/boa-run/class-test.rs"

[[example]]
name = "layout-test"
path = "example/font/layout-test.rs"

[[example]]
name = "render-test"
path = "example/font/render-test.rs"

