[package]
name = "toy-browser"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
boa_engine = { version = "0.16.0", features = ["console"] }
fontdue = "0.7.2"
gc = "0.4.1"
tokio = { version = "1.24.0", features = ["time", "rt", "rt-multi-thread"] }
regex = "1.7.0"
ggez = "0.8.1"


[workspace]
resolver = "2"

[[example]]
name = "boa-run"
path = "example/boa-run/test.rs"

[[example]]
name = "boa-class-test"
path = "example/boa-run/class-test.rs"

[[example]]
name = "boa-object-test"
path = "example/boa-run/object-test.rs"

[[example]]
name = "boa-classes"
path = "example/boa-run/classes.rs"

[[example]]
name = "layout-test"
path = "example/font/layout-test.rs"

[[example]]
name = "render-test"
path = "example/font/render-test.rs"

